prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/assign_to_binding.nut
// EXPECT_ERROR: "can't assign to binding"
let x = 10
x = 20
